--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <!-- SCROLLING IMAGES //-->
-    <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.JPG" id="sp" alt="" style="width: 100%; height: auto; position:relative;">
+    <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.jpg" id="sp" alt="" style="width: 100%; height: auto; position:relative;">
 
     <!-- ABOUT SECTION //-->
     <div id="About" style="width: 100%; height: 125vw; position: relative;">
@@ -74,9 +74,9 @@
       var index = 0;
       function scrollImages() {
 
-        if (index < 5) {index += 1}
-        else if (index == 5) {index = 1}
-        document.getElementById("sp").src = "Images/HeaderImages/scrollingPic"+index+".JPG";
+        if (index < 20) {index += 1}
+        else if (index == 20) {index = 1}
+        document.getElementById("sp").src = "Images/HeaderImages/scrollingPic"+index+".jpg";
         setTimeout(scrollImages, 3000);
       }
       scrollImages();
