--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <!-- SCROLLING IMAGES //-->
-    <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.jpg" id="sp" alt="" style="width: 100%; height: auto; position:relative;">
+    <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.JPG" id="sp" alt="" style="width: 100%; height: auto; position:relative;">
 
     <!-- ABOUT SECTION //-->
     <div id="About" style="width: 100%; height: 125vw; position: relative;">
@@ -76,7 +76,7 @@
 
         if (index < 20) {index += 1}
         else if (index == 20) {index = 1}
-        document.getElementById("sp").src = "Images/HEADERIMAGES/scrollingPic"+index+".jpg";
+        document.getElementById("sp").src = "Images/HEADERIMAGES/scrollingPic"+index+".JPG";
         setTimeout(scrollImages, 3000);
       }
       scrollImages();
