--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
   </head>
   <body>
     <div id="TopBar" style="width:100%; padding-bottom: 12.3%; position:relative;">
-        <a class="NavButtons" href="#About" id="aboutButton" style="margin-left: 5%;">About</a>
-        <a class="NavButtons" href="#Champions" id="tournamentButton">Champions</a>
-        <a class="NavButtons" href="#Teams" id="mediaButton">Media</a>
+        <a class="NavButtons" href="#About" id="aboutButton" style="margin-left: 5%;">ABOUT</a>
+        <a class="NavButtons" href="#Champions" id="tournamentButton">CHAMPIONS</a>
+        <a class="NavButtons" href="#Teams" id="mediaButton">MEDIA</a>
         <img src="Images/Logo.jpg" style="width: 12.3%; height: auto; position:absolute; left: 43.85%;" alt="">
-        <a class="NavButtons" href="#Teams" id="highlightsButton" style="margin-left: 18.88%;">Teams</a>
-        <a class="NavButtons" href="#Rules" id="registerButton">Rules</a>
-        <a class="NavButtons" href="#Register" id="registerButton">Register</a>
+        <a class="NavButtons" href="#Teams" id="highlightsButton" style="margin-left: 21%;">TEAMS</a>
+        <a class="NavButtons" href="#Rules" id="registerButton">RULES</a>
+        <a class="NavButtons" href="#Register" id="registerButton">REGISTER</a>
     </div>
 
     <!-- SCROLLING IMAGES //-->
-    <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.JPG" id="sp" alt="" style="width: 100%; height: auto; position:relative;">
+    <div style="width: 100%; height: 66.67vw; position: relative; border-top: 4px solid black; border-bottom: 4px solid black;">
+      <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic2.JPG" id="spOne" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 0.0;">
+      <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.JPG" id="spTwo" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 1.0;">
+    </div>
+
 
     <!-- ABOUT SECTION //-->
     <div id="About" style="width: 100%; height: 125vw; position: relative;">
@@ -71,15 +75,24 @@
 
     <!-- JAVASCRIPT FUNCTIONS //-->
     <script type="text/javascript">
-      var index = 0;
-      function scrollImages() {
 
-        if (index < 20) {index += 1}
-        else if (index == 20) {index = 1}
-        document.getElementById("sp").src = "Images/HEADERIMAGES/scrollingPic"+index+".JPG";
-        setTimeout(scrollImages, 3000);
+      function scrollImages() {
+        var imageOne = document.getElementById('spOne');
+        var imageTwo = document.getElementById('spTwo');
+
+        var topImage = imageTwo;
+        var bottomImage = imageOne;
+        if (imageOne.style.opacity >= 1.0) {topImage = imageOne; bottomImage = imageTwo;}
+        else if (imageTwo.style.opacity >= 1.0) {topImage = imageTwo; bottomImage = imageOne}
+
+        fade(topImage);
+        unfade(bottomImage);
+
+
+        setTimeout(scrollImages, 3500);
       }
       scrollImages();
+
 
       function showVideo(source) {
         document.getElementById('videoPlayerContainer').style.width = '80%';
@@ -94,6 +107,37 @@
         document.getElementById('videoPlayer').src = "";
         document.getElementById('closeButton').text = "";
       }
+      var index = 2;
+      function fade(element) {
+        var op = 1;  // initial opacity
+        var timer = setInterval(function () {
+          if (op <= 0.1) {
+              clearInterval(timer);
+              element.style.display = 'none';
+              if (index < 22) {index += 1}
+              else if (index == 22) {index = 1}
+              element.src = "Images/HEADERIMAGES/scrollingPic" + index + ".JPG";
+
+          }
+          element.style.opacity = op;
+          element.style.filter = 'alpha(opacity=' + op * 100 + ")";
+          op -= op * 0.1;
+        }, 40);
+      }
+
+      function unfade(element) {
+        var op = 0.1;  // initial opacity
+        element.style.display = 'block';
+        var timer = setInterval(function () {
+          if (op >= 1){
+            clearInterval(timer);
+          }
+          element.style.opacity = op;
+          element.style.filter = 'alpha(opacity=' + op * 100 + ")";
+          op += op * 0.1;
+        }, 40);
+      }
+
     </script>
 
 
