Added Autoplay To Embedded YouTube Vids

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div id="Champions" style="width: 100%; height: 155vw; position: relative">
       <img src="Images/Champions.jpg" alt="" style="width: 100%; height: 100%;">
 
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 7.1%; top: 76%;" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k');">CLICK TO VIEW DEAL V. GINDI GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 6.9%; top: 82.3%;" onclick="return showVideo('https://www.youtube.com/embed/C1ujrdgjHBc');">CLICK TO VIEW JAMIE V. BEYDA GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 7.1%; top: 88.8%;" onclick="return showVideo('https://www.youtube.com/embed/j46xya95HBM');">CLICK TO VIEW LEVY V. BRAHA GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 6.37%; top: 94.9%;" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k');">CLICK TO VIEW SUTTON V. SCHMOOL GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 31.87%; top: 79.3%;" onclick="return showVideo('https://www.youtube.com/embed/_atPgg3IdGk');">CLICK TO VIEW DEAL V. JAMIE GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 31.5%; top: 91.7%;" onclick="return showVideo(''https://www.youtube.com/embed/CUzsJ7W0rz0');">CLICK TO VIEW LEVY V. SUTTON GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 54.9%; top: 85.48%;" onclick="return showVideo('https://www.youtube.com/embed/mG0NbHVt-RE');">CLICK TO VIEW DEAL V. SUTTON GAMECAST</a>
+      <a class="gamecastLinks" href="#" style="position: absolute; left: 7.1%; top: 76%;" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k?autoplay=1');">CLICK TO VIEW DEAL V. GINDI GAMECAST</a>
+      <a class="gamecastLinks" href="#" style="position: absolute; left: 6.9%; top: 82.3%;" onclick="return showVideo('https://www.youtube.com/embed/C1ujrdgjHBc?autoplay=1');">CLICK TO VIEW JAMIE V. BEYDA GAMECAST</a>
+      <a class="gamecastLinks" href="#" style="position: absolute; left: 7.1%; top: 88.8%;" onclick="return showVideo('https://www.youtube.com/embed/j46xya95HBM?autoplay=1');">CLICK TO VIEW LEVY V. BRAHA GAMECAST</a>
+      <a class="gamecastLinks" href="#" style="position: absolute; left: 6.37%; top: 94.9%;" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k?autoplay=1');">CLICK TO VIEW SUTTON V. SCHMOOL GAMECAST</a>
+      <a class="gamecastLinks" href="#" style="position: absolute; left: 31.87%; top: 79.3%;" onclick="return showVideo('https://www.youtube.com/embed/_atPgg3IdGk?autoplay=1');">CLICK TO VIEW DEAL V. JAMIE GAMECAST</a>
+      <a class="gamecastLinks" href="#" style="position: absolute; left: 31.5%; top: 91.7%;" onclick="return showVideo(''https://www.youtube.com/embed/CUzsJ7W0rz0?autoplay=1');">CLICK TO VIEW LEVY V. SUTTON GAMECAST</a>
+      <a class="gamecastLinks" href="#" style="position: absolute; left: 54.9%; top: 85.48%;" onclick="return showVideo('https://www.youtube.com/embed/mG0NbHVt-RE?autoplay=1');">CLICK TO VIEW DEAL V. SUTTON GAMECAST</a>
 
       <div id="videoPlayerContainer" style="width: 0; height: 0; position: absolute; z-index: 10; top: 65%; left: 10%;">
         <iframe id="videoPlayer" position="fixed" width="100%" height="100%" src="" frameborder="0" allowfullscreen></iframe>
@@ -89,7 +89,7 @@
         unfade(bottomImage);
 
 
-        setTimeout(scrollImages, 3500);
+        setTimeout(scrollImages, 4000);
       }
       scrollImages();
 
