--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <!-- SCROLLING IMAGES //-->
-    <div style="width: 100%; height: 66.67vw; position: relative; border-top: 4px solid black; border-bottom: 4px solid black;">
+    <div style="width: 100%; height: 66.67vw; position: relative; border-top: 4px solid rgb(216, 71, 25); border-bottom: 4px solid rgb(216, 71, 25);">
       <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic2.JPG" id="spOne" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 0.0;">
       <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.JPG" id="spTwo" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 1.0;">
     </div>
@@ -122,7 +122,7 @@
           element.style.opacity = op;
           element.style.filter = 'alpha(opacity=' + op * 100 + ")";
           op -= op * 0.1;
-        }, 40);
+        }, 50);
       }
 
       function unfade(element) {
@@ -135,7 +135,7 @@
           element.style.opacity = op;
           element.style.filter = 'alpha(opacity=' + op * 100 + ")";
           op += op * 0.1;
-        }, 40);
+        }, 10);
       }
 
     </script>
