--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic2.JPG" id="spOne" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 0.0;">
       <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.JPG" id="spTwo" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 1.0;">
     </div>
+    <!-- VENUE //-->
+    <div style="width: 100%; height: 60.29vw; position: relative;">
+      <img src="Images/Venue.jpg" alt="" style="width:100%; height: 100%;">
+    </div>
 
 
     <!-- ABOUT SECTION //-->
