Experimenting with NavBar fixed position style

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <title>Hot Shot</title>
   </head>
   <body>
-    <div id="TopBar" style="width:100%; padding-bottom: 12.3%; position:relative;">
+    <div id="TopBar" style="width:100%; padding-bottom: 3vw; top: 0; position: fixed; z-index: 2; background-color: white; opacity: 0.7;">
         <a class="NavButtons" href="#About" id="aboutButton" style="margin-left: 5%;">ABOUT</a>
         <a class="NavButtons" href="#Champions" id="tournamentButton">CHAMPIONS</a>
         <a class="NavButtons" href="#Teams" id="mediaButton">MEDIA</a>
-        <img src="Images/Logo.jpg" style="width: 12.3%; height: auto; position:absolute; left: 43.85%;" alt="">
+        <img src="Images/Logo.jpg" style="width: 9%; height: auto; position:absolute; left: 43.85%;" alt="">
         <a class="NavButtons" href="#Teams" id="highlightsButton" style="margin-left: 21%;">TEAMS</a>
         <a class="NavButtons" href="#Rules" id="registerButton">RULES</a>
         <a class="NavButtons" href="#Register" id="registerButton">REGISTER</a>
     </div>
 
     <!-- SCROLLING IMAGES //-->
-    <div style="width: 100%; height: 66.67vw; position: relative; border-top: 4px solid rgb(216, 71, 25); border-bottom: 4px solid rgb(216, 71, 25);">
+    <div style="width: 100%; height: 66.67vw; position: relative; top: 9vw; border-top: 4px solid rgb(216, 71, 25); border-bottom: 4px solid rgb(216, 71, 25);">
       <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic2.JPG" id="spOne" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 0.0;">
       <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.JPG" id="spTwo" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 1.0;">
     </div>
