--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Hot Shot</title>
   </head>
   <body>
-    <div id="TopBar" style="width:100%; height: 5vw; top: 0; position: fixed; z-index: 2; background-color: rgba(250, 250, 250, 0.75);">
+    <div id="TopBar" style="width:100%; height: 5vw; top: 0; position: fixed; z-index: 3; background-color: rgba(250, 250, 250, 0.75);">
         <a class="NavButtons" href="#About" id="aboutButton" style="margin-left: 5%;">ABOUT</a>
         <a class="NavButtons" href="#Champions" id="tournamentButton">CHAMPIONS</a>
         <a class="NavButtons" href="#OnFire" id="mediaButton">MEDIA</a>
@@ -43,19 +43,22 @@
       <a class="gamecastLinks" href="#" style="position: absolute; left: 7.1%; top: 88.8%;" onclick="return showVideo('https://www.youtube.com/embed/j46xya95HBM?autoplay=1');">CLICK TO VIEW LEVY V. BRAHA GAMECAST</a>
       <a class="gamecastLinks" href="#" style="position: absolute; left: 6.37%; top: 94.9%;" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k?autoplay=1');">CLICK TO VIEW SUTTON V. SCHMOOL GAMECAST</a>
       <a class="gamecastLinks" href="#" style="position: absolute; left: 31.87%; top: 79.3%;" onclick="return showVideo('https://www.youtube.com/embed/_atPgg3IdGk?autoplay=1');">CLICK TO VIEW DEAL V. JAMIE GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 31.5%; top: 91.7%;" onclick="return showVideo(''https://www.youtube.com/embed/CUzsJ7W0rz0?autoplay=1');">CLICK TO VIEW LEVY V. SUTTON GAMECAST</a>
+      <a class="gamecastLinks" href="#" style="position: absolute; left: 31.5%; top: 91.7%;" onclick="return showVideo('https://www.youtube.com/embed/CUzsJ7W0rz0?autoplay=1');">CLICK TO VIEW LEVY V. SUTTON GAMECAST</a>
       <a class="gamecastLinks" href="#" style="position: absolute; left: 54.9%; top: 85.48%;" onclick="return showVideo('https://www.youtube.com/embed/mG0NbHVt-RE?autoplay=1');">CLICK TO VIEW DEAL V. SUTTON GAMECAST</a>
 
-      <div id="videoPlayerContainer" style="width: 0; height: 0; position: absolute; z-index: 10; top: 65%; left: 10%;">
+      <div id="videoPlayerContainer" style="width: 0; height: 0; position: absolute; z-index: 2; top: 65%; left: 10%;">
         <iframe id="videoPlayer" position="fixed" width="100%" height="100%" src="" frameborder="0" allowfullscreen></iframe>
-        <a id="closeButton" style="position: absolute; left: 100%; color: white; font-family: MyriadProBold;" href="#" onclick="closeVideo(); return false;"></a>
+        <a id="closeButton" style="position: absolute; left: 100%; top: -1vw; color: rgb(216, 71, 25); font-family: MyriadProBold; font-size: 2vw;" href="#" onclick="closeVideo(); return false;"></a>
       </div>
 
     </div>
 
-    <!-- ON FIRE SECTION //-->
+    <!-- ON FIRE/MEDIA SECTION //-->
     <div id="OnFire" style="width: 100%; height: 124.33vw; position: relative;">
       <img src="Images/OnFire.jpg" alt="" style="width: 100%; height: 100%;">
+    <!--  <video src="TeamsMedia/BIBI_FINAL.mp4" autoplay poster="TeamsMedia/BibiPosterImage.jpg" style="width: 0.434vw; height: 0.32395vw; position: absolute; z-index: 2;">
+
+    </video> //-->
     </div>
 
     <!-- TEAMS SECTION //-->
