Sliding Venue Images

--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
       <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic2.JPG" id="spOne" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 0.0;">
       <img class="scrollPics" src="Images/HEADERIMAGES/scrollingPic1.JPG" id="spTwo" alt="" style="width: 100%; height: 100%; position:absolute; opacity: 1.0;">
     </div>
-    <!-- VENUE //-->
-    <div style="width: 100%; height: 60.29vw; position: relative;">
-      <img src="Images/Venue.jpg" alt="" style="width:100%; height: 100%;">
-    </div>
-
 
     <!-- ABOUT SECTION //-->
-    <div id="About" style="width: 100%; height: 125vw; position: relative;">
+    <div id="About" style="width: 100%; height: 186.126vw; position: relative;">
         <img src="Images/About.jpg" alt="" style="width: 100%; height: 100%;">
+        <div class="Slider">
+          <figure>
+            <img src="Images/VenueImages/AC4I2276.JPG" alt="">
+            <img src="Images/VenueImages/AC4I2285.JPG" alt="">
+            <img src="Images/VenueImages/IMG_8427_1.jpg" alt="">
+            <img src="Images/VenueImages/AC4I4764.JPG" alt="">
+            <img src="Images/VenueImages/AC4I2215.JPG" alt="">
+          </figure>
+        </div>
     </div>
 
     <!-- CHAMPIONS SECTION //-->
@@ -56,9 +60,7 @@
     <!-- ON FIRE/MEDIA SECTION //-->
     <div id="OnFire" style="width: 100%; height: 124.33vw; position: relative;">
       <img src="Images/OnFire.jpg" alt="" style="width: 100%; height: 100%;">
-    <!--  <video src="TeamsMedia/BIBI_FINAL.mp4" autoplay poster="TeamsMedia/BibiPosterImage.jpg" style="width: 0.434vw; height: 0.32395vw; position: absolute; z-index: 2;">
-
-    </video> //-->
+      <video src="TeamsMedia/BIBI_FINAL.mp4" controls poster="TeamsMedia/BibiPosterImage.jpg" style="width: 43.4945%; height: 32.358vw; z-index: 2; position: absolute; left: 0; top: 18.9vw;"></video>
     </div>
 
     <!-- TEAMS SECTION //-->
