Beginning teams slider

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- ABOUT SECTION //-->
     <div id="About" style="width: 100%; height: 186.126vw; position: relative;">
         <img src="Images/About.jpg" alt="" style="width: 100%; height: 100%;">
-        <div class="Slider">
+        <div class="VenueSlider">
           <figure>
             <img src="Images/VenueImages/AC4I2276.JPG" alt="">
             <img src="Images/VenueImages/AC4I2285.JPG" alt="">
@@ -66,6 +66,23 @@
     <!-- TEAMS SECTION //-->
     <div id="Teams" style="width: 100%; height: 110vw; position: relative;">
       <img src="Images/Teams.jpg" alt="" style="width: 100%; height: 100%;">
+
+      <div class="TeamsSlider">
+        <figure id="teamFigure">
+          <img src="Images/TeamImages/06.JPG" alt="" style="margin-right: 2.3vw;">
+          <img src="Images/TeamImages/08.JPG" alt="">
+          <img src="Images/TeamImages/00.JPG" alt="" style="margin-right: 2.3vw;">
+          <img src="Images/TeamImages/01.JPG" alt="">
+          <img src="Images/TeamImages/02.JPG" alt="" style="margin-right: 2.3vw;">
+          <img src="Images/TeamImages/03.JPG" alt="">
+          <img src="Images/TeamImages/05.JPG" alt="" style="margin-right: 2.3vw;">
+          <img src="Images/TeamImages/07.JPG" alt="">
+          <img src="Images/TeamImages/09.JPG" alt="">
+        </figure>
+      </div>
+
+      <a href="#" style="position: absolute; left: 20vw; top: 105vw; z-index: 2;" onclick="return slideTeamRight();">Prev</a>
+      <a href="#" style="position: absolute; left: 92vw; top: 105vw; z-index: 2;" onclick="return slideTeamLeft();">Next</a>
     </div>
 
     <!-- RULES SECTION//-->
