--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="About" style="width: 100%; height: 186.126vw; position: relative;">
         <img src="Images/About.jpg" alt="" style="width: 100%; height: 100%;">
         <div class="VenueSlider">
-          <figure>
+          <figure id="venueFigure">
             <img src="Images/VenueImages/AC4I2276.JPG" alt="">
             <img src="Images/VenueImages/AC4I2285.JPG" alt="">
             <img src="Images/VenueImages/IMG_8427_1.jpg" alt="">
@@ -36,6 +36,8 @@
             <img src="Images/VenueImages/AC4I2215.JPG" alt="">
           </figure>
         </div>
+        <button id="venueNextBtn" class="VenueSliderButton" type="button" style=" left: 57%; top: 42.5vw; background: url(Images/nextButton.png) no-repeat;" onclick="return moveVenueLeft();"></button>
+        <button id="venueLastBtn" class="VenueSliderButton" type="button" style=" left: 15%; top: 42.5vw; background: url(Images/lastButton.png) no-repeat; display: none;" onclick="return moveVenueRight();"></button>
     </div>
 
     <!-- CHAMPIONS SECTION //-->
