Made form prettier and hooked it up to the google form

--- a/index.html
+++ b/index.html
@@ -42,21 +42,36 @@
     <!-- CHAMPIONS SECTION //-->
     <div id="Champions" style="width: 100%; height: 155vw; position: relative">
       <img src="Images/Champions.jpg" alt="" style="width: 100%; height: 100%;">
-      <div class="ChampRects" style="position: absolute; width: 18.972%; height: 2.73715vw; left: 5.3243%; top: 111vw;"><img src="Images/ChampionRectangles/Deal21.jpg" style="width:100%; height: 100%;" alt=""></div>
-      <div class="ChampRects" style="position: absolute; width: 18.972%; height: 2.73715vw; left: 5.3243%; top: 115vw;"><img src="Images/ChampionRectangles/Gindi10.jpg" style="width:100%; height: 100%;" alt=""></div>
-      <div class="ChampRects" style="position: absolute; width: 18.972%; height: 2.73715vw; left: 5.3243%; top: 120.8vw;"><img src="Images/ChampionRectangles/Jamie22.jpg" style="width:100%; height: 100%;" alt=""></div>
-      <div class="ChampRects" style="position: absolute; width: 18.972%; height: 2.73715vw; left: 5.3243%; top: 124.8vw;"><img src="Images/ChampionRectangles/Beyda16.jpg" style="width:100%; height: 100%;" alt=""></div>
-      <div class="ChampRects" style="position: absolute; width: 18.972%; height: 2.73715vw; left: 5.3243%; top: 130.8vw;"><img src="Images/ChampionRectangles/Levy21.jpg" style="width:100%; height: 100%;" alt=""></div>
-      <div class="ChampRects" style="position: absolute; width: 18.972%; height: 2.73715vw; left: 5.3243%; top: 134.8vw;"><img src="Images/ChampionRectangles/Braha7.jpg" style="width:100%; height: 100%;" alt=""></div>
-      <div class="ChampRects" style="position: absolute; width: 18.972%; height: 2.73715vw; left: 5.3243%; top: 140.13vw;"><img src="Images/ChampionRectangles/Sutton21.jpg" style="width:100%; height: 100%;" alt=""></div>
-      <div class="ChampRects" style="position: absolute; width: 18.972%; height: 2.73715vw; left: 5.3243%; top: 144.1vw;"><img src="Images/ChampionRectangles/Schmool18.jpg" style="width:100%; height: 100%;" alt=""></div>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 7.1%; top: 76%;" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k?autoplay=1');">CLICK TO VIEW DEAL V. GINDI GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 6.9%; top: 82.3%;" onclick="return showVideo('https://www.youtube.com/embed/C1ujrdgjHBc?autoplay=1');">CLICK TO VIEW JAMIE V. BEYDA GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 7.1%; top: 88.8%;" onclick="return showVideo('https://www.youtube.com/embed/j46xya95HBM?autoplay=1');">CLICK TO VIEW LEVY V. BRAHA GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 6.37%; top: 94.9%;" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k?autoplay=1');">CLICK TO VIEW SUTTON V. SCHMOOL GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 31.87%; top: 79.3%;" onclick="return showVideo('https://www.youtube.com/embed/_atPgg3IdGk?autoplay=1');">CLICK TO VIEW DEAL V. JAMIE GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 31.5%; top: 91.7%;" onclick="return showVideo('https://www.youtube.com/embed/CUzsJ7W0rz0?autoplay=1');">CLICK TO VIEW LEVY V. SUTTON GAMECAST</a>
-      <a class="gamecastLinks" href="#" style="position: absolute; left: 54.9%; top: 85.48%;" onclick="return showVideo('https://www.youtube.com/embed/mG0NbHVt-RE?autoplay=1');">CLICK TO VIEW DEAL V. SUTTON GAMECAST</a>
+
+      <div class="ChampRects" style="left: 5.3243%; top: 111vw;">
+        <img src="Images/ChampionRectangles/ChampRec1.jpg" style="width:100%; height: 100%;" alt="">
+        <a class="GamecastLinks" href="#" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k?autoplay=1');">CLICK TO VIEW DEAL V. GINDI GAMECAST</a>
+      </div>
+      <div class="ChampRects" style="left: 5.3243%; top: 120.8vw;">
+        <img src="Images/ChampionRectangles/ChampRec2.jpg" style="width:100%; height: 100%;" alt="">
+        <a class="GamecastLinks" href="#" onclick="return showVideo('https://www.youtube.com/embed/C1ujrdgjHBc?autoplay=1');">CLICK TO VIEW JAMIE V. BEYDA GAMECAST</a>
+      </div>
+      <div class="ChampRects" style="left: 5.3243%; top: 130.8vw;">
+        <img src="Images/ChampionRectangles/ChampRec3.jpg" style="width:100%; height: 100%;" alt="">
+        <a class="GamecastLinks" href="#" onclick="return showVideo('https://www.youtube.com/embed/j46xya95HBM?autoplay=1');">CLICK TO VIEW LEVY V. BRAHA GAMECAST</a>
+      </div>
+      <div class="ChampRects" style="left: 5.3243%; top: 140.13vw;">
+        <img src="Images/ChampionRectangles/ChampRec4.jpg" style="width:100%; height: 100%;" alt="">
+        <a class="GamecastLinks" href="#" onclick="return showVideo('https://www.youtube.com/embed/uJX3umjlj5k?autoplay=1');">CLICK TO VIEW SUTTON V. SCHMOOL GAMECAST</a>
+      </div>
+      <div class="ChampRects" style="left: 29.95%; top: 116vw;">
+        <img src="Images/ChampionRectangles/ChampRec5.jpg" style="width:100%; height: 100%;" alt="">
+        <a class="GamecastLinks" href="#" onclick="return showVideo('https://www.youtube.com/embed/_atPgg3IdGk?autoplay=1');">CLICK TO VIEW DEAL V. JAMIE GAMECAST</a>
+      </div>
+      <div class="ChampRects" style="left: 29.95%; top: 135.4vw;">
+        <img src="Images/ChampionRectangles/ChampRec6.jpg" style="width:100%; height: 100%;" alt="">
+        <a class="GamecastLinks" href="#" onclick="return showVideo('https://www.youtube.com/embed/CUzsJ7W0rz0?autoplay=1');">CLICK TO VIEW LEVY V. SUTTON GAMECAST</a>
+      </div>
+      <div class="ChampRects" style="left: 53.43%; top: 125.8vw;">
+        <img src="Images/ChampionRectangles/ChampRec7.jpg" style="width:100%; height: 100%;" alt="">
+        <a class="GamecastLinks" href="#" onclick="return showVideo('https://www.youtube.com/embed/mG0NbHVt-RE?autoplay=1');">CLICK TO VIEW DEAL V. SUTTON GAMECAST</a>
+      </div>
+
 
       <div id="videoPlayerContainer" style="width: 0; height: 0; position: absolute; z-index: 2; top: 65%; left: 10%;">
         <iframe id="videoPlayer" position="fixed" width="100%" height="100%" src="" frameborder="0" allowfullscreen></iframe>
@@ -108,6 +123,70 @@
     <!-- REGISTER SECTION //-->
     <div id="Register" style="width: 100%; height; 83.2vw; position: relative;">
       <img src="Images/Register.jpg" alt="" style="width: 100%; height: 100%;">
+
+
+      <form class="RegisterForm" action="https://docs.google.com/forms/d/e/1FAIpQLScbAJ5jz1RlWqq9fbMFGT6ZTQ7RaRA5_534eYL3lPJ8y5awdw/formResponse" method="post">
+        <div style="top: 13.5vw">
+          <label for="one">FIRST NAME:</label>
+          <input id="one" type="text" name="entry.499612536" value="">
+        </div>
+
+        <div style="top: 17.4vw">
+          <label for="two">LAST NAME:</label>
+          <input id="two" type="text" name="entry.1147093671" value="">
+        </div>
+
+        <div style="top: 21.3vw">
+          <label for="three">NICKNAME:</label>
+          <input id="three" type="text" name="entry.1426353177" value="">
+        </div>
+
+        <div style="top: 25.1vw">
+          <label for="four">BIRTHDAY:</label>
+          <input id="four" type="text" name="entry.1394554624" value="">
+        </div>
+
+        <div style="top: 29vw">
+          <label for="five">HEIGHT:</label>
+          <input id="five" type="text" name="entry.773130504" value="">
+        </div>
+
+        <div style="top: 33vw">
+          <label for="six">HIGH SCHOOL:</label>
+          <input id="six" type="text" name="entry.1883860782" value="">
+        </div>
+
+        <div style="top: 36.8vw">
+          <label for="seven">TOURNAMENT:</label>
+          <input id="seven" type="text" name="entry.1557373982" value="">
+        </div>
+
+        <div style="top: 40.8vw">
+          <label for="eight">INSTAGRAM HANDLE:</label>
+          <input id="eight" type="text" name="entry.1937532379" value="">
+        </div>
+
+        <div style="top: 44.7vw">
+          <label for="nine">MOBILE:</label>
+          <input id="nine" type="text" name="entry.2009092416" value="">
+        </div>
+
+        <div style="top: 48.6vw">
+          <label for="ten">EMAIL:</label>
+          <input id="ten" type="text" name="entry.1172271377" value="">
+        </div>
+
+        <div style="top: 65vw; left: 40%;">
+          <button id="submitButton" type="submit">Submit</button>
+        </div>
+
+
+
+
+      </form>
+
+
+
     </div>
 
 
