Got rid of white background on hotshot logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a class="NavButtons" href="#About" id="aboutButton" style="margin-left: 5%;">ABOUT</a>
         <a class="NavButtons" href="#Champions" id="tournamentButton">CHAMPIONS</a>
         <a class="NavButtons" href="#OnFire" id="mediaButton">MEDIA</a>
-        <img src="Images/Logo.jpg" style=" height: 5vw; width: auto; position:absolute; left: 40.5%;" alt="">
+        <img src="Images/Logo.png" style=" height: 5vw; width: auto; position:absolute; left: 40.5%;" alt="">
         <a class="NavButtons" href="#Teams" id="highlightsButton" style="margin-left: 27.5%;">TEAMS</a>
         <a class="NavButtons" href="#Rules" id="registerButton">RULES</a>
         <a class="NavButtons" href="#Register" id="registerButton">REGISTER</a>
