--- a/index.html
+++ b/index.html
@@ -176,12 +176,16 @@
           <input id="ten" type="text" name="entry.1172271377" value="">
         </div>
 
-        <div style="top: 65vw; left: 40%;">
-          <button id="submitButton" type="submit">Submit</button>
+        <div style="position: absolute; left: 40%; top: 59vw;">
+          <button type="button" name="button" onclick="return showWaiver();">WAIVER</button>
         </div>
 
-
-
+        <div class="WaiverSlideDown" style="width: 45.4945vw; height: 70vw;">
+          <figure id="waiverFigure">
+            <img src="Images/Waiver.jpg" style="width: 100%; height: 100%; position: absolute; left: 0; top: 0;" alt="">
+            <div style="position: abosolute; top: 95%; left: 40%;"><button id="submitButton" type="submit">Submit</button></div>
+          </figure>
+        </div>
 
       </form>
 
