--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
           <button type="button" name="button" onclick="return showWaiver();">WAIVER</button>
         </div>
 
-        <div class="WaiverSlideDown" style="width: 45.4945vw; height: 70vw;">
+        <div class="WaiverSlideDown" style="width: 45.4945vw; height: 70vw; left: 19vw; top: 61.86vw;">
           <figure id="waiverFigure">
             <img src="Images/Waiver.jpg" style="width: 100%; height: 100%; position: absolute; left: 0; top: 0;" alt="">
-            <div style="position: abosolute; top: 95%; left: 40%;"><button id="submitButton" type="submit">Submit</button></div>
+            <div style="position: abosolute; top: 95%; left: 40%;"><button id="submitButton" type="submit">Accept And Submit</button></div>
           </figure>
         </div>
 
