--- a/index.html
+++ b/index.html
@@ -128,32 +128,32 @@
       <form class="RegisterForm" action="https://docs.google.com/forms/d/e/1FAIpQLScbAJ5jz1RlWqq9fbMFGT6ZTQ7RaRA5_534eYL3lPJ8y5awdw/formResponse" method="post">
         <div style="top: 13.5vw">
           <label for="one">FIRST NAME:</label>
-          <input id="one" type="text" name="entry.499612536" value="">
+          <input id="one" type="text" name="entry.499612536" placeholder="Your First Name" value="">
         </div>
 
         <div style="top: 17.4vw">
           <label for="two">LAST NAME:</label>
-          <input id="two" type="text" name="entry.1147093671" value="">
+          <input id="two" type="text" name="entry.1147093671" placeholder="Your Last Name" value="">
         </div>
 
         <div style="top: 21.3vw">
           <label for="three">NICKNAME:</label>
-          <input id="three" type="text" name="entry.1426353177" value="">
+          <input id="three" type="text" name="entry.1426353177" placeholder="Your Nickname" value="">
         </div>
 
         <div style="top: 25.1vw">
           <label for="four">BIRTHDAY:</label>
-          <input id="four" type="text" name="entry.1394554624" value="">
+          <input id="four" type="text" name="entry.1394554624" placeholder="DD/MM/YYYY" value="">
         </div>
 
         <div style="top: 29vw">
           <label for="five">HEIGHT:</label>
-          <input id="five" type="text" name="entry.773130504" value="">
+          <input id="five" type="text" name="entry.773130504" placeholder="5'11" value="">
         </div>
 
         <div style="top: 33vw">
           <label for="six">HIGH SCHOOL:</label>
-          <input id="six" type="text" name="entry.1883860782" value="">
+          <input id="six" type="text" name="entry.1883860782" placeholder="Your High School" value="">
         </div>
 
         <div style="top: 36.8vw">
@@ -163,17 +163,17 @@
 
         <div style="top: 40.8vw">
           <label for="eight">INSTAGRAM HANDLE:</label>
-          <input id="eight" type="text" name="entry.1937532379" value="">
+          <input id="eight" type="text" name="entry.1937532379" placeholder="Your Instagram Handle" value="">
         </div>
 
         <div style="top: 44.7vw">
           <label for="nine">MOBILE:</label>
-          <input id="nine" type="text" name="entry.2009092416" value="">
+          <input id="nine" type="text" name="entry.2009092416" placeholder="3334445555" value="">
         </div>
 
         <div style="top: 48.6vw">
           <label for="ten">EMAIL:</label>
-          <input id="ten" type="text" name="entry.1172271377" value="">
+          <input id="ten" type="text" name="entry.1172271377" placeholder="youremail@email.com" value="">
         </div>
 
         <div style="position: absolute; left: 40%; top: 59vw;">
