--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="functions.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="SHORTCUT ICON"
+       href="favicon.ico">
     <title>Hot Shot</title>
   </head>
   <body>
