--- a/index.html
+++ b/index.html
@@ -161,9 +161,10 @@
 
         <div style="top: 36.8vw">
           <label for="seven">TOURNAMENT:</label>
-          <input id="seven" type="radio" name="entry.1557373982" value="Basketball" style="padding-right: 2vw;"> <label for="seven">Basketball</label>
-          <input id="seven" type="radio" name="entry.1557373982" value="VolleyBall" style="padding-right: 2vw;"> <label for="seven">Volleyball</label>
-          <input id="seven" type="radio" name="entry.1557373982" value="Tennis"> <label for="seven">Tennis</label>
+          <input id="seven" class="radioCheckbox" type="radio" name="entry.1557373982" value="Hot Shot" style="padding-right: 2vw;"><label for="seven">Hot Shot</label>
+          <input id="seven" class="radioCheckbox" type="radio" name="entry.1557373982" value="VolleyBall" style="padding-right: 2vw;"><label for="seven">Volleyball</label>
+          <input id="seven" class="radioCheckbox" type="radio" name="entry.1557373982" value="Tennis" style="padding-right: 2vw;"><label for="seven">Tennis</label>
+          <input id="seven" class="radioCheckbox" type="radio" name="entry.1557373982" value="Dodgeball"><label for="seven">Dodgeball</label>
         </div>
 
         <div style="top: 40.8vw">
