--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="functions.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -129,73 +130,77 @@
 
 
       <form class="RegisterForm" action="https://docs.google.com/forms/d/e/1FAIpQLScbAJ5jz1RlWqq9fbMFGT6ZTQ7RaRA5_534eYL3lPJ8y5awdw/formResponse" onsubmit="return checkForm();" method="post">
-        <div style="top: 13.5vw">
+        <div style="top: 13vw">
           <label for="one">FIRST NAME:</label>
           <input id="one" type="text" name="entry.499612536" placeholder="Your First Name" value="">
         </div>
 
-        <div style="top: 17.4vw">
+        <div style="top: 17vw">
           <label for="two">LAST NAME:</label>
           <input id="two" type="text" name="entry.1147093671" placeholder="Your Last Name" value="">
         </div>
 
-        <div style="top: 21.3vw">
+        <div style="top: 20.8vw">
           <label for="three">NICKNAME:</label>
           <input id="three" type="text" name="entry.1426353177" placeholder="Your Nickname" value="">
         </div>
 
-        <div style="top: 25.1vw">
+        <div style="top: 24.6vw">
           <label for="four">BIRTHDAY:</label>
           <input id="four" type="text" name="entry.1394554624" placeholder="MM/DD/YYYY" value="">
         </div>
 
-        <div style="top: 29vw">
+        <div style="top: 28.5vw">
           <label for="five">HEIGHT:</label>
           <input id="five" type="text" name="entry.773130504" placeholder="5'11" value="">
         </div>
 
-        <div style="top: 33vw">
+        <div style="top: 32.5vw">
           <label for="six">HIGH SCHOOL:</label>
           <input id="six" type="text" name="entry.1883860782" placeholder="Your High School" value="">
         </div>
 
-        <div style="top: 36.8vw">
-          <label for="seven">TOURNAMENT:</label>
-          <input id="seven" class="radioCheckbox" type="radio" name="entry.1557373982" value="Hot Shot" style="padding-right: 2vw;"><label for="seven">Hot Shot</label>
-          <input id="seven" class="radioCheckbox" type="radio" name="entry.1557373982" value="VolleyBall" style="padding-right: 2vw;"><label for="seven">Volleyball</label>
-          <input id="seven" class="radioCheckbox" type="radio" name="entry.1557373982" value="Tennis" style="padding-right: 2vw;"><label for="seven">Tennis</label>
-          <input id="seven" class="radioCheckbox" type="radio" name="entry.1557373982" value="Dodgeball"><label for="seven">Dodgeball</label>
-        </div>
-
-        <div style="top: 40.8vw">
+        <div style="top: 36.3vw">
           <label for="eight">INSTAGRAM HANDLE:</label>
           <input id="eight" type="text" name="entry.1937532379" placeholder="Your Instagram Handle" value="">
         </div>
 
-        <div style="top: 44.7vw">
+        <div style="top: 40.3vw">
           <label for="nine">MOBILE:</label>
           <input id="nine" type="text" name="entry.2009092416" placeholder="3334445555" value="">
         </div>
 
-        <div style="top: 48.6vw">
+        <div style="top: 44.2vw">
           <label for="ten">EMAIL:</label>
           <input id="ten" type="text" name="entry.1172271377" placeholder="youremail@email.com" value="">
         </div>
 
-        <div style="position: absolute; left: 40%; top: 59vw;">
-          <button type="button" name="button" onclick="return showWaiver();">WAIVER</button>
+        <div style="position: absolute; left: 38.5%; top: 59vw;">
+          <button class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;"type="button" name="button" onclick="return showWaiver();">Read Waiver</button>
         </div>
 
         <div class="WaiverSlideDown" style="width: 45.4945vw; height: 70vw; left: 19vw; top: 61.86vw;">
           <figure id="waiverFigure">
             <img src="Images/Waiver.jpg" style="width: 100%; height: 85%; position: absolute; left: 0; top: 0;" alt="">
-            <div style="position: abosolute; top: 85%; left: 23%;"><button type="button" onclick="return closeWaiver();">I Have Read Accepted The Terms And Conditions</button></div>
+            <div style="position: abosolute; top: 85%; left: 23%;"><button class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;" type="button" onclick="return closeWaiver();">I Have Read Accepted The Terms And Conditions</button></div>
           </figure>
         </div>
 
-        <div id="submitDiv" style="position: absolute; top: 63vw; left: 39.7vw; display: none;"><button id="submitButton" type="submit" style="">Submit</button></div>
-        <div id="alert" style="position: absolute; top: 67vw; left: 27vw; color: red; display: none;">*Make sure every field is filled out before submitting*</div>
+        <div id="submitDiv" style="position: absolute; top: 63vw; left: 37.5vw; display: none;"><button class="RegistrationButtons" id="submitButton" type="submit">SUBMIT</button></div>
+        <div id="alert" style="position: absolute; top: 69vw; left: 30vw; color: red; display: none; font-family: MyriadProItalic; font-size: 1.5vw;">*Make sure every field is filled out before submitting*</div>
       </form>
+
+
+      <div style="position: absolute; left: 27%; top: 5vw;">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+          <input type="hidden" name="cmd" value="_s-xclick">
+          <input type="hidden" name="hosted_button_id" value="857VUCYM69CMQ">
+          <button class="RegistrationButtons" type="submit" name="submit">Click Here To Pay Before You Register</button>
+          <!-- <input type="image" src="Images/Paymentbutton.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> -->
+          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+      </div>
+
 
 
 
