--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <!-- ABOUT SECTION //-->
     <div id="About" style="width: 100%; height: 186.126vw; position: relative;">
         <img src="Images/About.jpg" alt="" style="width: 100%; height: 100%;">
+        <img src="" alt="">
+
         <div class="VenueSlider">
           <figure id="venueFigure">
             <img src="Images/VenueImages/AC4I2276.JPG" alt="">
@@ -130,49 +132,49 @@
 
 
       <form class="RegisterForm" action="https://docs.google.com/forms/d/e/1FAIpQLScbAJ5jz1RlWqq9fbMFGT6ZTQ7RaRA5_534eYL3lPJ8y5awdw/formResponse" onsubmit="return checkForm();" method="post">
-        <div style="top: 13vw">
+        <div style="top: 13.2vw">
           <label for="one">FIRST NAME:</label>
-          <input id="one" type="text" name="entry.499612536" placeholder="Your First Name" value="">
+          <input id="one" type="text" name="entry.499612536" value="">
         </div>
 
-        <div style="top: 17vw">
+        <div style="top: 17.2vw">
           <label for="two">LAST NAME:</label>
-          <input id="two" type="text" name="entry.1147093671" placeholder="Your Last Name" value="">
+          <input id="two" type="text" name="entry.1147093671" value="">
         </div>
 
-        <div style="top: 20.8vw">
+        <div style="top: 21vw">
           <label for="three">NICKNAME:</label>
-          <input id="three" type="text" name="entry.1426353177" placeholder="Your Nickname" value="">
+          <input id="three" type="text" name="entry.1426353177" value="">
         </div>
 
-        <div style="top: 24.6vw">
+        <div style="top: 24.8vw">
           <label for="four">BIRTHDAY:</label>
           <input id="four" type="text" name="entry.1394554624" placeholder="MM/DD/YYYY" value="">
         </div>
 
-        <div style="top: 28.5vw">
+        <div style="top: 28.8vw">
           <label for="five">HEIGHT:</label>
           <input id="five" type="text" name="entry.773130504" placeholder="5'11" value="">
         </div>
 
         <div style="top: 32.5vw">
           <label for="six">HIGH SCHOOL:</label>
-          <input id="six" type="text" name="entry.1883860782" placeholder="Your High School" value="">
+          <input id="six" type="text" name="entry.1883860782" value="">
         </div>
 
-        <div style="top: 36.3vw">
+        <div style="top: 36.6vw">
           <label for="eight">INSTAGRAM HANDLE:</label>
-          <input id="eight" type="text" name="entry.1937532379" placeholder="Your Instagram Handle" value="">
+          <input id="eight" type="text" name="entry.1937532379" value="">
         </div>
 
         <div style="top: 40.3vw">
           <label for="nine">MOBILE:</label>
-          <input id="nine" type="text" name="entry.2009092416" placeholder="3334445555" value="">
+          <input id="nine" type="text" name="entry.2009092416" value="">
         </div>
 
         <div style="top: 44.2vw">
           <label for="ten">EMAIL:</label>
-          <input id="ten" type="text" name="entry.1172271377" placeholder="youremail@email.com" value="">
+          <input id="ten" type="text" name="entry.1172271377" value="">
         </div>
 
         <div style="position: absolute; left: 38.5%; top: 59vw;">
