--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
     <!-- ABOUT SECTION //-->
     <div id="About" style="width: 100%; height: 186.126vw; position: relative;">
-        <img src="Images/About.jpg" alt="" style="width: 100%; height: 100%;">
-        <img src="" alt="">
+        <img src="Images/About.png" alt="" style="width: 100%; height: 100%;">
+        <a href="http://www.magendavidyeshivah.org" style="position: absolute; left: 56.24%; top: 127.48vw;"><img src="Images/MagenLogo.png" alt="" style="height: 11.548vw; width: auto;"></a>
+
 
         <div class="VenueSlider">
           <figure id="venueFigure">
