--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
 
         <div style="position: absolute; left: 38.5%; top: 59vw;">
-          <button class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;"type="button" name="button" onclick="return showWaiver();">Read Waiver</button>
+          <button id="showWaiverButton"class="RegistrationButtons" style="font-size: 1vw; padding: 0.5vw 1vw;"type="button" name="button" onclick="return showWaiver();">Read Waiver</button>
         </div>
 
         <div class="WaiverSlideDown" style="width: 45.4945vw; height: 70vw; left: 19vw; top: 61.86vw;">
